# tracking/resources/openapi.yaml
@@ -1,10 +1,10 @@
 openapi: 3.0.0
 info:
   description: >-
-    Leadville API definition that is used as a contract between Frontend and
+    IOT Tracking API definition that is used as a contract between Frontend and
     backend
   version: 1.0.2-oas3
-  title: Leadville API
+  title: IOT Tracking API
   contact:
     email: mohamedveron23@gmail.com
   license:
@@ -70,7 +70,7 @@ paths:
         '400':
           description: 'invalid input, object invalid'
   
-  /devices/{id}:        
+  /devices/ready:        
     get:
       summary: >-
         Accepts pilot id.
@@ -103,32 +103,43 @@ components:
         - $ref: '#/components/schemas/Device'
         - required:
           - id
-          - imageUrl
+          - SIMCard
         - type: object  
           properties:
             id:
               type: integer
-              format: int64 
-            imageUrl:
-              type: string
-            gender:
-              type: string
+              format: int64
+            SIMCard:
+              type: object
+              $ref: '#/components/schemas/SIMCard'  
   
     Device: 
       required:
-      - pilotPostId
+      - temperature
       type: object
       properties:
-        pilotPostId:
+        status:
+          type: string
+          example: ready
+        temperature:
+          type: number
+          example: -25.
+    
+    SIMCard: 
+      required:
+      - Id
+      type: object
+      properties:
+        Id:
           type: integer
           format: int64
-        frequentFlyer:
-          type: boolean
+        operatorCode:
+          type: string
           example: true
-        about:
+        status:
           type: string
-          example: about me
-        flyingDetails:
+          example: active
+        country:
           type: string
-          example: I've been flying for 5 years
+          example: Egypt     
   
