# tracking/src/main/java/com/vodafone/iot/tracking/model/SIMCard.java
@@ -1,0 +1,42 @@
+package com.vodafone.iot.tracking.model;
+
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.Id;
+import javax.persistence.Table;
+
+import lombok.Getter;
+import lombok.Setter;
+
+@Entity
+@Table(name="card")
+public class SIMCard {
+	
+	@Id
+	@GeneratedValue
+	private Long id;
+	@Getter
+	@Setter
+	private String status;
+	@Getter
+	@Setter
+	private String code;
+	@Getter
+	@Setter
+	private String country;
+	
+	
+	public SIMCard() {
+	}
+	
+	public SIMCard(Long id, String status, String code, String country) {
+		super();
+		this.id = id;
+		this.status = status;
+		this.code = code;
+		this.country = country;
+	}
+	
+	
+
+}
